[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyrebro_domain_validator"
version = "0.3.2"
description = "A domain validation package, written by CYREBRO's Innovation team."
readme = "README.md"
authors = [
    {name = "CYREBRO Innovation", email = "innovation@cyrebro.io"}
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "dnspython>=2.2.1",
    "tld>=0.12.6",
    "tenacity",
]

[project.urls]
Homepage = "https://github.com/CYREBRO/cyrebro-domain-validator"

[tool.setuptools]
packages = ["cyrebro_domain_validator"]


[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]